--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
+    "rc-footer": "^0.6.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.1.2",
     "simple-react-footer": "^1.0.2",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.11"
