--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "simple-react-footer": "^1.0.2",
+    "swiper": "^6.8.1",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.11"
   },
