--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
     "react-slick": "^0.28.1",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
-    "simple-react-footer": "^1.0.2",
     "swiper": "^6.8.1",
-    "web-vitals": "^1.0.1",
-    "yarn": "^1.22.11"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
